--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Max MacCrate
 
 # Short bio or description (displayed in the header)
-description: testing
+description: Sax, Statistics, and Engineering
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/mmaccrate/mmaccrate.github.io/blob/master/images/profilephoto.PNG
 
 #
 # Flags below are optional
@@ -18,15 +18,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email:mmaccrate@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: mmaccrate
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/max-maccrate-565352122/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
