--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: mmaccrate
   instagram:
-  linkedin: max-maccrate-565352122
+  linkedin: mmaccrate
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
